# vgg-burn

./: Cargo.toml  README.md
examples/inference/: main.rs
src/: lib.rs
src/model/: conv_block.rs  fc_block.rs  imagenet.rs  mod.rs  vgg.rs  weights.rs
