[package]
name = "vgg-burn"
version = "0.1.0"
edition = "2024"

[dependencies]
# Note: default-features = false is needed to disable std
burn = { git = "https://github.com/softmaximalist/burn.git", rev = "bde752663d0362de08c2839cddbe53f67810954d", default-features = false, features = ["ndarray"] }
burn-std = { git = "https://github.com/softmaximalist/burn.git", rev = "bde752663d0362de08c2839cddbe53f67810954d", optional = true, default-features = false, features = ["network"] }
burn-store = { git = "https://github.com/softmaximalist/burn.git", rev = "bde752663d0362de08c2839cddbe53f67810954d", optional = true, default-features = false, features = ["pytorch"] }
dirs = { version = "6.0.0", optional = true }
image = { version = "0.25.10", features = ["jpeg", "png"] }

[features]
default = []
std = ["burn-std?/std", "burn-store?/std"]
pretrained = ["std", "dep:burn-std", "dep:burn-store", "dep:dirs"]

[[example]]
name = "inference"
required-features = ["pretrained"]
